[tool.poetry]
name = "katzplotkinpy"
version = "0.1.0"
description = "This is a project implements the FORTRAN computer programs listed in Low Speed Aerodynamics (2nd Ed) into a Python package and stand alone program(s). Additional features such as visualisation have been included."
authors = ["AlwinW <16846521+AlwinW@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alwinw/katzplotkinpy"
repository = "https://github.com/alwinw/katzplotkinpy"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pytest = "^6.2.2"
pre-commit = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[flake8]
max-line-length = 88
max-complexity = 18
