[package]
name = "first-program"
version = "0.1.0"
authors = ["peshwar9"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "new-first-program"
path = "src/main.rs"

[[bin]]
name = "new-second-program"
path = "src/second.rs"

[dependencies]
